# ncatbot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  Ncatbot LICENSE  README-plugin.md  README.md  config.yaml  eg_group_markdown.py  eg_setlist.py  main-plugin.py  main.py  main.py.bak  pyproject.toml  requirements.txt  setup.py  test.py  插件开发临时文档.md
.github/workflows/: pypi-publish-manual.yml  pypi-publish-old.yml  pypi-publish.yml
Ncatbot/: api.py  client.py  http.py  log.py  message.py  settings.py  utils.py  websockNB.py
Ncatbot/apis/: base.py  faces.py  group.py  message.py  message_chain.py  status.py  system.py  user.py  utils.py
cli/: main.cpp
docs/: 3.8.x_changes.md  README.md  如何启动napcat的正向ws端口.docx
example/: eg_group.py  eg_group_message.py  eg_message.py  eg_send.py  eg_system.py  eg_user.py
ncatbot/: __init__.py  api.py  bot.py  client.py  config.py  element.py  gateway.py  http.py  logger.py  message.py  plugin.py  plugins_sys.py  setting.py  status.py  universal_data_io.py  user.py
ncatbot/RBACManager/: RBACManager.py  RBAC_Manager.py  Role.py  Trie.py  User.py  __init__.py  permission_trie.py
ncatbot/adapter/: __init__.py
ncatbot/cli/: main.py
ncatbot/conn/: __init__.py  connect.py  gateway.py  http.py  login.py  wsroute.py
ncatbot/core/: __init__.py  api.py  client.py  element.py  launcher.py  message.py  request.py
ncatbot/plugin/: __init__.py  base_plugin.py  compatible.py  config.py  custom_err.py  event.py  loader.py  plugin_mixins.py
ncatbot/plugin_sys/: __init__.py  base_plugin.py  compatible.py  config.py  custom_err.py  event.py  loader.py
ncatbot/rbac_manager/: RBAC_Manager.py  RBAC_manager.py  __init__.py  permission_path.py  permission_trie.py
ncatbot/scripts/: __init__.py  check_linux_permissions.py  check_qq_version.py  check_version.py  install_linux_qq.py  modify_linux_qq.py  publish.py  utils.py
ncatbot/utils/: ChangeDir.py  Color.py  config.py  (+18 more)
ncatpy/: __init__.py  api.py  client.py  faces.py  flags.py  http.py  logging.py  message.py  setting.py  status.py  wsapi.py  wstart.py
resources/: pypi-publish.yml.bak  setup.py.bak  sync_api.py.bak
(+106 files in other folders)
