[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.dynamic]
version = { file = "ncatbot/__init__.py", attr = "__version__" }

[tool.poetry]
name = "ncatbot"
description = "NapCat Python SDK, 提供一站式开发部署方案"
authors = ["木子 <yihaoli_2002@foxmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/liyihao1110/ncatbot"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.4"
httpx = "^0.28.1"
psutil = "^6.1.1"
tqdm = "^4.67.1"
requests = "^2.32.3"
Markdown = "^3.7"
Pygments = "^2.19.1"
pyppeteer = "^2.0.0"
pyyaml = "^6.0.2"
packaging = "^24.2"

[tool.poetry.dev-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = []

[project]
authors = [
    {name = "木子", email = "yihaoli_2002@foxmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "websockets<11.0,>=10.4",
    "httpx<1.0.0,>=0.28.1",
    "psutil<7.0.0,>=6.1.1",
    "tqdm<5.0.0,>=4.67.1",
    "requests<3.0.0,>=2.32.3",
    "Markdown<4.0,>=3.7",
    "Pygments<3.0.0,>=2.19.1",
    "pyppeteer<3.0.0,>=2.0.0",
    "pyyaml<7.0.0,>=6.0.2",
    "packaging>=24.2",
]
name = "ncatbot"
description = "NapCat Python SDK, 提供一站式开发部署方案"
readme = "README.md"

[project.urls]
repository = "https://github.com/liyihao1110/ncatbot"

[project.dynamic.version]
file = "ncatbot/__init__.py"
attr = "__version__"
